# mantis

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: linux-ci.yml
cmake/: version.hpp.in
include/: arena_allocator.hpp  asm_generator.hpp  asm_nodes.hpp  ast.hpp  ast_binary_operator.hpp  ast_new.hpp  ast_old.hpp  ast_unary_operator.hpp  cli_engine.hpp  code_emitter.hpp  config.hpp  diagnostics_engine.hpp  error_kinds.hpp  lexer.hpp  parser.hpp  source_location.hpp  source_manager.hpp  string_table.hpp  symbol_table.hpp  tac.hpp  tac_binary_operator.hpp  tac_generator.hpp  tac_old.hpp  tac_unary_operator.hpp  token.hpp  token_type.hpp  type_system.hpp  util.hpp
include/def_files/: ast_binary_operator.def  tac_binary_operator.def  token_type.def  unary_operator.def
shenanigans/: main  main.c
src/: CMakeLists.txt  main.cpp  mainpage.dox
src/asm_generation/: CMakeLists.txt  asm_generator.cpp  asm_printer.cpp  replace_double_stack.cpp  replace_pseudo_regs.cpp  translate_binary.cpp  translate_function.cpp  translate_function_call.cpp  translate_instruction.cpp  translate_program.cpp  translate_return.cpp  translate_unary.cpp  translate_value.cpp
src/code_emission/: CMakeLists.txt  emit_code.cpp  emit_function_definition.cpp  emit_instruction.cpp  emit_operand.cpp  emit_static_variable.cpp  emit_top_level.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/parser/: CMakeLists.txt  ast_printer.cpp  parse_block.cpp  parse_declaration.cpp  parse_factor.cpp  parse_param_list.cpp  parse_program.cpp  parse_statement.cpp  parser.cpp  parser_expression.cpp
src/tac_generation/: CMakeLists.txt  gen_program.cpp  tac_printer.cpp  translate_block_item.cpp  translate_declaration.cpp  translate_expression.cpp  translate_statement.cpp  traverse_scope.cpp
src/util/: CMakeLists.txt  ansi.cpp  cli_engine.cpp  compile_file.cpp  parse_cli_arguments.cpp  parse_file_info.cpp  print_mantis_help.cpp  util.cpp
tests/: CMakeLists.txt  extract_test_info.py  run_test.py
